<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E7"
    android:padding="8dp"
    tools:context="com.blockx.greg.becomerich.Activities.BankActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageMoney"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                app:srcCompat="@drawable/cash_icon" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.22"
                android:gravity="center"
                android:text="@string/bankScreenCash"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMoney"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".8"
                android:gravity="center|left"
                android:text=""
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight=".5">

            <ImageView
                android:id="@+id/imageBank"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                app:srcCompat="@drawable/bank_icon" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.22"
                android:gravity="center"
                android:text="@string/bankScreenBank"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewBankMoney"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".8"
                android:gravity="center|left"
                android:text=""
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/bankInput"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:onClick="Deposit"
            android:text="@string/bankScreenDeposit" />

        <Button
            android:id="@+id/button3"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:onClick="Withdraw"
            android:text="@string/bankScreenWithdraw" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/colorDarkGreen"
        android:onClick="goBackToScreen"
        android:text="@string/backBtnText" />


</RelativeLayout>
