<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blockx.greg.becomerich.MarketActivity">

    <include layout="@layout/common_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_weight=".5"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:backgroundTint="@color/colorLightGreen"
                    android:onClick="goToChooseResidency"
                    android:scaleType="fitStart"
                    android:tint="@color/colorMidGreen"
                    app:srcCompat="@mipmap/house_icon" />

                <TextView
                    android:padding="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:clickable="false"
                    android:text="@string/marketScreenResidency"
                    android:textColor="@color/colorMidGreen"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5">

                <ImageButton
                    android:id="@+id/imageButtonTransport"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorLightBlue"
                    android:onClick="goToChooseTransport"
                    android:scaleType="fitStart"
                    android:tint="@color/colorDarkBlue"
                    app:srcCompat="@mipmap/car_icon" />

                <TextView
                    android:padding="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:clickable="false"
                    android:text="@string/marketScreenTransport"
                    android:textColor="@color/colorDarkBlue"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="50dp"
            android:layout_weight=".5"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5">

                <ImageButton
                    android:id="@+id/imageButtonWeapon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:backgroundTint="@color/colorOrange"
                    android:onClick="goToChooseWeapon"
                    android:scaleType="fitStart"
                    android:tint="@color/colorOrangeDark"
                    app:srcCompat="@mipmap/gun_icon" />
                <TextView
                    android:padding="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:clickable="false"
                    android:text="@string/marketScreenWeapons"
                    android:textColor="@color/colorOrangeDark"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <ImageButton
                android:id="@+id/invisbutton"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight=".5"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

</android.widget.RelativeLayout>